# notes-milewski-ctfp-hs

./: .gitignore  .travis.yml  ChangeLog.md  README.md  notes-milewski-ctfp-hs.cabal  stack.yaml
app/: Main.hs
src/CTNotes/: Introduction.lhs  P1Ch03a_NatsCat.lhs  P1Ch03b_FiniteCats.lhs  P1Ch03c_DiscreteCats.lhs  P1Ch07_Functors.lhs  P1Ch07_Functors_Composition.lhs  P1Ch07b_Functors_AcrossCats.lhs  P1Ch08a_BiFunctorAsFunctor.lhs  P1Ch08b_BiFunctorComposition.lhs  P1Ch08c_BiFunctorNonHask.lhs  P1Ch10_NaturalTransformations.lhs  P1Ch10b_NTsNonHask.lhs  P2Ch01a_LimitsColimitsExtas.lhs  P2Ch01a_LimitsColimitsExtras.lhs  P2Ch01b_Continuity.lhs  P2Ch02a_LimitsColimitsExtras.lhs  P2Ch02b_Continuity.lhs  P2Ch02c_Equalizer.lhs  P2Ch03_FreeMonoidFoldMap.lhs  P2Ch05a_YonedaAndMap.lhs  P2Ch05b_YonedaNonHask.lhs  P2Ch3_FreeMonoidFoldMap.lhs  P3Ch02a_CurryAdj.lhs  P3Ch02b_AdjNonHask.lhs  P3Ch02c_AdjProps.lhs  P3Ch06a_CTMonads.lhs  P3Ch06b_FiniteMonads.lhs  P3Ch06c_MonoidalCats.lhs  P3Ch07a_GameOfLife.lhs  P3Ch07b_Comonad.lhs  P3Ch08a_Falg.lhs  P3Ch08b_FalgFreeMonad.lhs  P3Ch09a_Talg.lhs  P3Ch09b_AlgebraAndFree.lhs  P3Ch11a_KanExt.lhs  P3Ch12a_HaskEnrich.lhs  P3Ch12b_EnrichedPreorder.lhs  P3Ch15a_Spans.lhs  P3Ch15b_CatsAsMonads.lhs
src/Trivialities/: CatsInProgs.txt  NTProps.hs
src/Utils/: Pretty.hs  Stream.hs
src/WorkInProgress/: NaturalTransformation.hs
src/WorkInProgress/Functor/: Composition.hs
