name:                notes-milewski-ctfp-hs
version:             0.0.1.0
synopsis:             Notes and thoughts from reading Category Theory for Programmers written in Haskell
-- description:
homepage:            https://github.com/rpeszek/notes-milewski-ctfp-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Peszek
maintainer:          example@example.com
copyright:           2017 Robert Peszek
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CTNotes.P1Ch07_Functors
                     , CTNotes.P1Ch10_NaturalTransformations
                     , WorkInProgress.NaturalTransformation
                     , WorkInProgress.Functor.Composition
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable notes-milewski-ctfp-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , notes-milewski-ctfp-hs
  default-language:    Haskell2010

test-suite ct-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , notes-milewski-ctfp-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/notes-milewski-ctfp-hs
